--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,17 +1,16 @@
+// BEGIN: abpxx6d04wxr
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
-/* .bg-space {
-    background-image: url('/images/background.jpg');
+.bg-space {
+    background-image: url('priv/static/images/background.jpg');
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+}
 
-  } */
-
-  @font-face {
+@font-face {
     font-family: "WorkSans";
     src: url("/fonts/WorkSans-Regular.ttf");
     font-weight: normal;
@@ -21,8 +20,6 @@
 @font-face {
     font-family: "WorkSans";
     src: url("/fonts/WorkSans-Bold.ttf");
-    font-weight: bold;
-    font-style: normal;
 }
 
 .dropdown-menu-arrow::before {
@@ -36,17 +33,23 @@
 }
 
 .menu-item {
-    @apply block px-4 py-2 text-sm text-white font-brand font-regular
-} 
+    @include block;
+    @include px-4;
+    @include py-2;
+    @include text-sm;
+    @include text-white;
+    @include font-brand;
+    @include font-regular;
+}
 
 .menu-item:hover {
-    @apply hover:text-emDark-light
+    @include hover(text-emDark-light);
 }
 
 .round-image-padding {
     border-radius: 50%;
-    border: 0.5px solid #FFFFFF;
-    padding: 2px;
+    border: 1.5px solid #FFFFFF;
+    padding: 4px;
 }
 
 .img-down-arrow::after {
@@ -59,15 +62,5 @@
     border-color: white transparent transparent transparent;
     border-style: solid;
 }
-  
 
-
-
-
-
-  
-  
-  
-  
-  
-  
+// END: abpxx6d04wxr
