--- a/lib/space_goods_web/components/layouts/app.html.heex
+++ b/lib/space_goods_web/components/layouts/app.html.heex
@@ -1,51 +1,92 @@
-<header class="navbar bg-space p-4">
-  <div class="container mx-auto flex justify-between items-center">
+<header class="bg-space flex justify-between items-center px-6 py-3">
+  <div class="flex relative">
     <.link navigate={~p"/"} class="text-red-500 text-2xl font-bold mr-4">
       Space Goods
     </.link>
     <.link navigate={~p"/products"} class="text-red-500 text-2xl font-bold mr-4">
       Products
     </.link>
-    <.link navigate={~p"/cart"} class="text-red-500 text-2xl font-bold">
+    <%!-- <.link navigate={~p"/cart"} class="text-red-500 text-2xl font-bold">
       Cart
-    </.link>
-    <div class="flex items-center">
+    </.link> --%>
+  </div>
+    <div class="relative ml-auto">
+    <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={SpaceGoodsWeb.Layouts.App.toggle_dropdown_menu()}>
+      <img src="images/user.png" alt="Profile Image" class="round-image-padding w-20 h-20" />
+    </button>
+    <div 
+      id="dropdown_menu"
+      class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-flex bg-red-500 rounded-lg shadow-xl border border-white"
+      hidden="true"
+      >
       <%= if @current_user do %>
-        <span class="text-sm leading-4 text-zinc-900 hover:text-zinc-700 mr-2">
-          Welcome, <%= @current_user.email %>
-        </span>
-        <.link
-          href={~p"/users/settings"}
-          class="text-sm leading-4 text-zinc-900 hover:text-zinc-700 mr-2"
-        >
-          User Settings
+        <.link 
+        href={~p"/users/settings"}
+        class="menu-item border-b border-white border-opacity-50"
+        role="menuitem"
+        tabindex="-1"
+        method="get"
+        id="user-menu-item-0"
+        > 
+          Signed in as <%= @current_user.email %>
         </.link>
-        <.link
-          href={~p"/users/log_out"}
-          method="delete"
-          class="text-sm leading-4 text-zinc-900 hover:text-zinc-700"
-        >
-          Log out
+        <.link 
+        href="#"
+        class="menu-item"
+        role="menuitem"
+        tabindex="-1"
+        method="get"
+        id="user-menu-item-1"
+        > 
+          Your favorites
+        </.link>
+        <.link 
+        href={~p"/users/settings"}
+        class="menu-item  border-b border-white border-opacity-50"
+        role="menuitem"
+        tabindex="-1"
+        method="get"
+        id="user-menu-item-2"
+        > 
+          Settings
+        </.link>
+        <.link 
+        href={~p"/users/log_out"}
+        class="menu-item"
+        role="menuitem"
+        tabindex="-1"
+        method="delete"
+        id="user-menu-item-3"
+        > 
+          Sign out
         </.link>
       <% else %>
-        <.link
-          href={~p"/users/register"}
-          class="text-sm leading-4 text-zinc-900 hover:text-zinc-700 mr-2"
+        <.link 
+        href={~p"/users/log_in"}
+        class="menu-item border-b border-white border-opacity-50"
+        role="menuitem"
+        tabindex="-1"
+        method="get"
+        id="user-menu-item-0"
         >
-          Register
+        Sign in
         </.link>
-        <.link
-          href={~p"/users/log_in"}
-          class="text-sm leading-4 text-zinc-900 hover:text-zinc-700"
+        <.link 
+        href={~p"/users/register"}
+        class="menu-item"
+        role="menuitem"
+        tabindex="-1"
+        method="get"
+        id="user-menu-item-1"
         >
-          Log in
+        Register
         </.link>
       <% end %>
     </div>
   </div>
 </header>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-3xl">
+  <div class="mx-auto max-w-10xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
