--- a/lib/space_goods_web/components/layouts/app.html.heex
+++ b/lib/space_goods_web/components/layouts/app.html.heex
@@ -6,92 +6,103 @@
     <.link navigate={~p"/products"} class="text-red-500 text-2xl font-bold mr-4">
       Products
     </.link>
-    <%!-- <.link navigate={~p"/cart"} class="text-red-500 text-2xl font-bold">
-      Cart
-    </.link> --%>
   </div>
-    <div class="relative ml-auto">
-    <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={SpaceGoodsWeb.Layouts.App.toggle_dropdown_menu()}>
-      <img src="images/user.png" alt="Profile Image" class="round-image-padding w-20 h-20" />
-    </button>
-    <div 
-      id="dropdown_menu"
-      class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-flex bg-red-500 rounded-lg shadow-xl border border-white"
-      hidden="true"
+  <div class="relative ml-auto flex">
+    <.link navigate={~p"/favorites"} class="text-red-500 text-2xl font-bold mr-4">
+      <img src="images/heart.png" alt="Heart Image" class="round-image-padding w-20 h-20" />
+    </.link>
+    <.link navigate={~p"/cart"} class="text-red-500 text-2xl font-bold mr-4">
+      <img src="images/cart.png" alt="Cart Image" class="round-image-padding w-20 h-20" />
+    </.link>
+    <div class="flex-col">
+      <button
+        class="img-down-arrow"
+        type="button"
+        id="user-menu-button"
+        phx-click={SpaceGoodsWeb.Layouts.App.toggle_dropdown_menu()}
       >
-      <%= if @current_user do %>
-        <.link 
-        href={~p"/users/settings"}
-        class="menu-item border-b border-white border-opacity-50"
-        role="menuitem"
-        tabindex="-1"
-        method="get"
-        id="user-menu-item-0"
-        > 
-          Signed in as <%= @current_user.email %>
-        </.link>
-        <.link 
-        href="#"
-        class="menu-item"
-        role="menuitem"
-        tabindex="-1"
-        method="get"
-        id="user-menu-item-1"
-        > 
-          Your favorites
-        </.link>
-        <.link 
-        href={~p"/users/settings"}
-        class="menu-item  border-b border-white border-opacity-50"
-        role="menuitem"
-        tabindex="-1"
-        method="get"
-        id="user-menu-item-2"
-        > 
-          Settings
-        </.link>
-        <.link 
-        href={~p"/users/log_out"}
-        class="menu-item"
-        role="menuitem"
-        tabindex="-1"
-        method="delete"
-        id="user-menu-item-3"
-        > 
-          Sign out
-        </.link>
-      <% else %>
-        <.link 
-        href={~p"/users/log_in"}
-        class="menu-item border-b border-white border-opacity-50"
-        role="menuitem"
-        tabindex="-1"
-        method="get"
-        id="user-menu-item-0"
-        >
-        Sign in
-        </.link>
-        <.link 
-        href={~p"/users/register"}
-        class="menu-item"
-        role="menuitem"
-        tabindex="-1"
-        method="get"
-        id="user-menu-item-1"
-        >
-        Register
-        </.link>
-      <% end %>
+        <img src="images/user.png" alt="Profile Image" class="round-image-padding w-20 h-20" />
+      </button>
+      <div
+        id="dropdown_menu"
+        phx-click-away={SpaceGoodsWeb.Layouts.App.toggle_dropdown_menu()}
+        class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-flex bg-red-500 rounded-lg shadow-xl border border-white"
+        hidden="true"
+      >
+        <%= if @current_user do %>
+          <.link
+            href={~p"/users/settings"}
+            class="menu-item border-b border-white border-opacity-50"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-0"
+          >
+            Welcome, <%= @current_user.email %>
+          </.link>
+          <.link
+            href="#"
+            class="menu-item"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-1"
+          >
+            Favorites
+          </.link>
+          <.link
+            href={~p"/users/settings"}
+            class="menu-item  border-b border-white border-opacity-50"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-2"
+          >
+            Settings
+          </.link>
+          <.link
+            href={~p"/users/log_out"}
+            class="menu-item"
+            role="menuitem"
+            tabindex="-1"
+            method="delete"
+            id="user-menu-item-3"
+          >
+            Sign out
+          </.link>
+        <% else %>
+          <.link
+            href={~p"/users/log_in"}
+            class="menu-item border-b border-white border-opacity-50"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-0"
+          >
+            Sign in
+          </.link>
+          <.link
+            href={~p"/users/register"}
+            class="menu-item"
+            role="menuitem"
+            tabindex="-1"
+            method="get"
+            id="user-menu-item-1"
+          >
+            Register
+          </.link>
+        <% end %>
+      </div>
     </div>
   </div>
 </header>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-10xl">
+  <div class="mx-auto max-w-5xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
 </main>
-<footer class="p-4 mt-auto text-sm text-center text-gray-400 leading-6">
+<footer class="p-4 text-sm text-center text-gray-400 leading-6 bottom-0 sticky">
   <p>
     Crafted with ❤
   </p>
