--- a/lib/space_goods_web/components/layouts/root.html.heex
+++ b/lib/space_goods_web/components/layouts/root.html.heex
@@ -12,6 +12,7 @@
     </script>
   </head>
   <body class="bg-space">
+  <div class="bg-space">1</div>
     <%= @inner_content %>
   </body>
 </html>
